name:                http-parsers
version:             0.1.0.0
synopsis:            Types and attoparsec parsers for HTTP requests and responses
description:
    This package provides a set of simple types (built on the primitives
    provided by the @http-types@ package and @attoparsec@ parsers for HTTP
    requests, responses, and headers.
homepage:            http://github.com/bgamari/http-parsers
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2016 Ben Gamari
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Network.HTTP.Parse
  other-extensions:    RecordWildCards, OverloadedStrings
  default-language:    Haskell2010
  build-depends:       base >=4.8 && <4.11,
                       bytestring >=0.10 && <0.11,
                       attoparsec >=0.13 && <0.14,
                       http-types >=0.9 && <0.11,
                       case-insensitive >=1.2 && <1.3,
                       filepath >=1.4 && <1.5

test-suite Test
  type:                exitcode-stdio-1.0
  main-is:             Run.hs
  hs-source-dirs:      test, .
  default-language:    Haskell2010
  build-depends:       base,
                       bytestring,
                       attoparsec,
                       http-types,
                       case-insensitive,
                       filepath,
                       tasty,
                       tasty-golden,
                       pretty-show